discussion/kv_engine/166838/166838_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Add extra logging

Change-Id: I2a597d14fdc3bf144b5ce46b1a421572da8074f2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-12-02 15:28:42.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-02 15:32:46.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35790/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35790/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/durability/passive_durability_monitor.cc:135:20:
error: expected ";" after do/while statement
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35790/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42185/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42185/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4032/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14325/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/durability/passive_durability_monitor.cc:135:20: error: expected ";" after do/while statement [clang-diagnostic-error]
highCompletedSeqno));
                   ^
                   ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14325/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/durability/passive_durability_monitor.cc:135:20:
error: expected ";" after do/while statement [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14325/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3957/ : FAILURE

Compile error at [2021-12-02T15:31:51.298Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/durability/passive_durability_monitor.cc:135:20:
error: expected ";" after do/while statement
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3957/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15950/ : FAILURE

Compile error at [2021-12-02T15:30:48.537Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/durability/passive_durability_monitor.cc:135:20:
error: expected ?;? before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15950/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17018/ : FAILURE

Compile error at [2021-12-02T15:30:21.325Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/durability/passive_durability_monitor.cc:135:20:
error: expected ";" after do/while statement
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17018/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15126/ : FAILURE

Compile error at [2021-12-02T15:31:49.400Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/durability/passive_durability_monitor.cc:135:20:
error: expected ";" after do/while statement
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15126/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24345/ : FAILURE

Compile error at [2021-12-02T15:30:15.237Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master@2/kv_engine/engines/ep/src/durability/passive_durability_monitor.cc:135:20:
error: expected ";" after do/while statement
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24345/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16242/ : FAILURE

Compile error at [2021-12-02T15:30:57.822Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/durability/passive_durability_monitor.cc:135:20:
error: expected ?;? before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16242/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13134/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
